--- a/Style.css
+++ b/Style.css
@@ -17,17 +17,29 @@ body {
 }
 
 /* CURSOR */
+/* CURSOR – LUZ */
 .cursor {
-  width: 14px;
-  height: 14px;
-  background: #38bdf8;
-  border-radius: 50%;
+  width: 18px;
+  height: 18px;
   position: fixed;
   pointer-events: none;
+  border-radius: 50%;
   transform: translate(-50%, -50%);
   z-index: 2000;
-  box-shadow: 0 0 20px rgba(56,189,248,.8);
+
+  background: radial-gradient(
+    circle,
+    rgba(56,189,248,0.9) 0%,
+    rgba(56,189,248,0.6) 30%,
+    rgba(56,189,248,0.25) 55%,
+    rgba(56,189,248,0.05) 70%,
+    transparent 75%
+  );
+
+  filter: blur(2px);
+  transition: transform 0.12s ease-out, opacity 0.2s;
 }
+
 
 /* NAVBAR */
 .navbar {
